# dabba

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  dabba.yaml  deny.toml  install.ps1  install.sh
.github/workflows/: ci.yml  docs.yml  quickstart.yml  release.yml
docs/: .gitignore  astro.config.mjs  package.json  pnpm-lock.yaml
docs/src/content/docs/: architecture.md  configuration.md  index.mdx  observability.md  quickstart.md
docs/src/styles/: custom.css
examples/: eks.yaml  existing.yaml  local.yaml
hack/: validate.sh
hack/local-test/: README.md  cloud-init.yaml  in-vm.sh  run.sh
quickstart/01-cluster/: main.tf
quickstart/01-cluster-eks/: main.tf
quickstart/02-bootstrap/: main.tf
src/: config.rs  edit.rs  main.rs  run.rs  up.rs
