[package]
name = "dabba"
version = "0.0.1"
edition = "2021"
license = "Apache-2.0"
description = "dabba — a FluxCD-based Kubernetes platform you drive from a config"

[[bin]]
name = "dabba"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
anyhow = "1"
