[package]
name = "dabba"
version = "0.0.1"
edition = "2021"
license = "Apache-2.0"
description = "dabba — bring up a full Kubernetes platform from a single config"

[[bin]]
name = "dabba"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
anyhow = "1"
