[package]
name = "dabba"
version = "0.0.1"
edition = "2021"
license = "Apache-2.0"
description = "dabba — bring up a full Kubernetes platform from a single config"

[[bin]]
name = "dabba"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
serde = { version = "1", features = ["derive"] }
# serde_yaml_ng is the maintained continuation of the now-archived serde_yaml;
# imported under the serde_yaml name so the call sites are unchanged.
serde_yaml = { package = "serde_yaml_ng", version = "0.10" }
anyhow = "1"
